# ice-cream-dataops

./: cdf.toml  pyproject.toml
 .github/workflows/: deploy.yaml
.github/workflows/: deploy.yml
ice-cream-dataops/: build_info.test.yaml  config.prod.yaml  config.test.yaml
ice-cream-dataops/function_local_venvs/icapi_assets_extractor/: run_check.py
ice-cream-dataops/function_local_venvs/oee_timeseries/: run_check.py
ice-cream-dataops/modules/bootcamp/data_foundation/auth/: data_developer.yaml  data_explorer.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/auth/: icapi_extractors.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/data_sets/: icapi.DataSet.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/functions/: schedules.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/functions/icapi_assets_extractor/: handler.py
ice-cream-dataops/modules/bootcamp/ice_cream_api/transformations/: contextualize_ts_assets.Transformation.yaml  create_asset_hierarchy.schedule.yaml  create_asset_hierarchy.yaml  icapi_ts_asset_contextualization.schedule.yaml  icapi_ts_assets_contextualization.schedule.yaml  icapi_ts_assets_contextualization.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/workflows/: wf_icapi_data_pipeline.WorkFlow.yaml  wf_icapi_data_pipeline.WorkflowVersion.yaml
ice-cream-dataops/modules/bootcamp/use_cases/oee/auth/: data_pipeline_oee.yaml
